<resources>
    <string name="app_name">HelpQ</string>
    <string name="queue_tab">Queue</string>
    <string name="enrolled_tab">Students</string>
    <string name="workshops_tab">Workshops</string>
    <string name="inbox_tab">Inbox</string>
    <string name="board_tab">Board</string>
    <string name="PRIORITY_BLOCKING">🛑</string>
    <string name="PRIORITY_STRETCH">🚀</string>
    <string name="PRIORITY_CURIOSITY">🔍</string>
    <string name="EMOJI_IN_PERSON">👥</string>
    <string name="EMOJI_WRITTEN">📝</string>
    <string name="blocking_wait_time">🛑 Blocking:</string>
    <string name="stretch_wait_time">🚀 Stretch:</string>
    <string name="curiosity_wait_time">🔍 Curiosity:</string>
    <string name="in_person">in-person</string>
    <string name="written">written</string>
    <string name="sign_up">SIGN UP </string>
    <string name="signed_up">SIGNED UP </string>
    <string name="format_hours">%d hr %d min</string>
    <string name="format_minutes">%d min</string>
    <string name="default_wait_time">no data</string>
    <string name="enrolled">You have enrolled for the workshop.</string>
    <string name="unenrolled">You have unenrolled for the workshop.</string>
    <string name="attendee"> attendee</string>
    <string name="attendees"> attendees</string>
    <string name="request_in_person">The student requested in-person help!</string>
    <string name="archive_question">Question archived.</string>
    <string name="delete_question">Question deleted.</string>
    <string name="edge_case_answer">Please enter an answer.</string>
    <string name="success_question_answered">Question answered!</string>
    <string name="edge_case_enter_question">Please enter a question.</string>
    <string name="edge_case_enter_priority">Please select type of priority.</string>
    <string name="edge_case_enter_type_of_help">Please select type of help.</string>
    <string name="edge_case_enter_location">Please enter a title and/or location.</string>
    <string name="success_create_workshop">Workshop created.</string>
    <string name="edge_case_wrong_date_workshop">This date has already passed.</string>
    <string name="edge_case_empty_username">Please enter a username.</string>
    <string name="edge_case_empty_password">Please enter a password.</string>
    <string name="edge_case_invalid_user">Incorrect username or password.</string>
    <string name="error_with_query">error with query</string>
    <string name="edge_case_empty_name">Please enter your full name.</string>
    <string name="edge_case_invalid_admin">This admin does not exist.</string>
    <string name="edge_case_invalid_username">This user already exists.</string>
    <string name="select_admin">Please select an admin.</string>
    <string name="username_taken">Username already taken.</string>
    <string name="profile_tab">Profile</string>
    <string name="facebook_app_id">347613129505173</string>
    <string name="registration_complete">Registered and logged in successfully!</string>
    <string name="see_more">see more</string>
    <string name="see_less">see less</string>
    <string name="empty_inbox">You currently have nothing here, check back later!</string>
    <string name="empty_queue">There are currently no questions on the queue.</string>
    <string name="empty_workshop">There are currently no workshops.</string>
    <string name="your_answer">Your answer:</string>
    <string name="admin_answer">\'s answer:</string>
    <string name="empty_enrolled">You currently have no students.</string>
    <string name="workshop_when">When: </string>
    <string name="workshop_where">Where: </string>
    <string name="snackbar_text">Your question was deleted.</string>
    <string name="snackbar_action">UNDO</string>
    <string name="max_notifications">99</string>
    <string name="empty_reply">Please enter a comment.</string>
    <string name="reply_in_person_help">You cannot reply to a question that requests in-person help.</string>
    <string name="workshop_alarm">Upcoming Workshop</string>
    <string name="workshop_alarm_description">will begin in</string>
    <string name="verfication">Verified</string>
    <string name="likes">likes</string>
    <string name="no_questions_student">This student has not asked any questions.</string>
    <string name="search_hint">Find a question...</string>
    <string name="stat_question">pending</string>
    <string name="search_notice">No results match your search.</string>
    <string name="no_pending_student">This student has no pending questions.</string>
    <string name="no_comments">This question has no comments.</string>
    <string name="not_able_to_have_comments">In-person questions do not contain written replies.</string>
    <string name="at_least_one_verify">You must have at least one reply verified</string>
    <string name="see_student_reply">See student reply</string>
    <string name="workshop_deleted">Workshop deleted</string>
    <string name="verified_replies">verified replies</string>
    <string name="verified_reply">verified reply</string>
    <string name="slogan">Login to get all your questions answered!</string>
    <string name="remind_me_in">Remind me about workshops in...</string>
    <string name="minutes">minutes</string>
</resources>
