<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_profile"
        android:icon="@color/colorBlue"
        android:title="@string/profile_tab"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_workshop"
        android:icon="@color/colorBlue"
        android:title="@string/workshops_tab"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_queue"
        android:icon="@color/colorBlue"
        android:title="@string/queue_tab"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_inbox"
        android:icon="@color/colorBlue"
        android:title="@string/inbox_tab"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_board"
        android:icon="@color/colorBlue"
        android:title="@string/board_tab"
        app:showAsAction="always" />
</menu>