<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvStudent"
        android:layout_width="126dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etQuestion"
        android:layout_width="393dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="Type your question"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine|text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStudent"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/tbBlocker"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Blocker"
        android:textOff="@string/PRIORITY_BLOCKING"
        android:textOn="@string/PRIORITY_BLOCKING"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuestion" />

    <ToggleButton
        android:id="@+id/tbStretch"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="Stretch"
        android:textOff="@string/PRIORITY_STRETCH"
        android:textOn="@string/PRIORITY_STRETCH"
        app:layout_constraintStart_toEndOf="@+id/tbBlocker"
        app:layout_constraintTop_toBottomOf="@+id/etQuestion" />

    <ToggleButton
        android:id="@+id/tbExplanation"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Explanation"
        android:textOff="@string/PRIORITY_CURIOSITY"
        android:textOn="@string/PRIORITY_CURIOSITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tbStretch"
        app:layout_constraintTop_toBottomOf="@+id/etQuestion" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbExplanation"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>